--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,35 @@
 .App {
-	text-align: center;
-}
-
-.App-logo {
-	height: 40vmin;
-	pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-	.App-logo {
-		animation: App-logo-spin infinite 20s linear;
-	}
-}
-
-.App-header {
-	background-color: #282c34;
-	min-height: 100vh;
 	display: flex;
-	flex-direction: column;
 	align-items: center;
 	justify-content: center;
-	font-size: calc(10px + 2vmin);
-	color: white;
+	min-height: 100vh;
 }
 
-.App-link {
-	color: #61dafb;
+.logo-wrapper {
+	padding: 0.25rem;
 }
 
-@keyframes App-logo-spin {
-	from {
-		transform: rotate(0deg);
-	}
-	to {
-		transform: rotate(360deg);
-	}
+.logo {
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	width: 32px;
+	height: 32px;
+	background-color: #2f54eb;
+	border-radius: 6px;
+	color: #fff;
+	font-weight: 700;
+	position: relative;
+}
+
+.logo::after {
+	content: "";
+	position: absolute;
+	width: 4px;
+	height: 4px;
+	border-radius: 50%;
+	background-color: #fa8c16;
+	right: 5%;
+	bottom: 5%;
+	transform: translate(-50%, -50%);
 }
