--- a/src/styles/conf/_variables.scss
+++ b/src/styles/conf/_variables.scss
@@ -20,6 +20,7 @@ $white: #fff;
 $black: #000;
 $royal-blue: #2f54eb;
 $west-side: #fa8c16;
+$lima: #52c41a;
 
 $body-color: $black;
 $body-bg: $white;
