refactor: set legacy grid column gap
Decided to roll back to the old version of the grid-column-gap instead of the column-gap due to more extensive browser support

--- a/components/Header/header.module.scss
+++ b/components/Header/header.module.scss
@@ -27,7 +27,7 @@
 		align-items: center;
 		grid-template-rows: auto;
 		grid-template-areas: "header__brand header__nav";
-		column-gap: math.div(conf.$grid-gutter-width, 2);
+		grid-column-gap: math.div(conf.$grid-gutter-width, 2);
 		padding: {
 			top: $padding-y--xxs;
 			bottom: $padding-y--xxs;
