refactor: comment xxl, xxxl sizes
Sizes are not using, comment them, maybe in the future it will be useful

--- a/src/styles/conf/_variables.scss
+++ b/src/styles/conf/_variables.scss
@@ -38,8 +38,8 @@ $s: 600px;
 $m: 768px;
 $l: 924px;
 $xl: 1202px;
-$xxl: 1600px;
-$xxxl: 1920px;
+// $xxl: 1680px;
+// $xxxl: 1920px;
 
 // Grid
 $global-padding: 16px;
