--- a/src/styles/conf/_variables.scss
+++ b/src/styles/conf/_variables.scss
@@ -21,6 +21,7 @@ $black: #000;
 $royal-blue: #2f54eb;
 $west-side: #fa8c16;
 $lima: #52c41a;
+$selago: #f5f6fe;
 
 $body-color: $black;
 $body-bg: $white;
