fix: features and inner block negative indent
The inner block of features has a negative indent. For the correct highlighting of this block in the retractor, we add styles that will crop the excess.

--- a/components/Features/features.module.scss
+++ b/components/Features/features.module.scss
@@ -5,6 +5,8 @@
 @use "../../src/styles/mix";
 
 .features {
+	display: flex;
+	flex-direction: column;
 	&__container {
 		display: flex;
 		flex-direction: column;
