--- a/components/Reference/reference.module.scss
+++ b/components/Reference/reference.module.scss
@@ -64,8 +64,10 @@
 	&__figure {
 		margin: 0;
 		position: absolute;
-		top: -10px;
+		top: 0;
 		left: 0;
+		bottom: 0;
+		right: 0;
 		width: 1170px;
 		aspect-ratio: 1171 / 584;
 		mix-blend-mode: overlay;
