feat: @next/font
Due the Largest Contentful Paint (LCP) from Google Font CDN we need @next/font solution. This means you can optimally load web fonts with zero layout shift

--- a/components/Throne/throne.module.scss
+++ b/components/Throne/throne.module.scss
@@ -340,7 +340,7 @@
 			);
 
 			font-size: inherit;
-			font-family: "Open Sans", sans-serif;
+			// font-family: "Open Sans", sans-serif;
 			margin: 0;
 			font-weight: 700;
 		}
