--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -37,7 +37,7 @@
 }
 
 body {
-	font-family: conf.$font-family-sans-serif;
+	// font-family: conf.$font-family-sans-serif;
 	line-height: conf.$global-line-height;
 	background-color: conf.$body-bg;
 	color: conf.$body-color;
