fix: input disabled styles
background-color && border-color for disabled input

--- a/src/styles/conf/_variables.scss
+++ b/src/styles/conf/_variables.scss
@@ -26,6 +26,7 @@ $bamboo: #e16803; // .btn :active background-color
 $chardonnay: #fcc58a; // .btn disactive background-color
 $mine-shaft: #222; // .formControl (input) color
 $selago: #f5f6fe; // .formControl (input) background-color / .callout background
+$selago-2: #f9fafe; // .formControl (input) background-color / border-color on :disabled
 $cornflower-blue: #6d87f1; // .formControl (input) border-color :hover
 $guardsman-red: #bb0000; // .formControl (input) border-color :error
 $dove-gray: #646464; // .formControl (input) border-color :disabled
