--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -13,6 +13,7 @@
 :root {
 	--animation-timing-function: ease-in-out;
 	--animation-duration: 0.15s;
+	// --body-color: conf.$body-color;
 
 	font-size: conf.$font-size-root;
 	min-width: conf.$xxxs; // If less then horizontal scroll
@@ -60,6 +61,24 @@ body {
 	clip: rect(0, 0, 0, 0);
 	white-space: nowrap;
 	border: 0;
+}
+
+.icon {
+	display: inline-block;
+	fill: currentColor;
+	height: 1em;
+	stroke: currentColor;
+	stroke-width: 0;
+	vertical-align: top;
+	width: 1em;
+
+	&_check_rounded {
+		fill: transparent;
+	}
+
+	&_cross_rounded {
+		fill: transparent;
+	}
 }
 
 .container {
