--- a/src/styles/conf/_variables.scss
+++ b/src/styles/conf/_variables.scss
@@ -1,3 +1,6 @@
+@use "sass:color";
+@use "./fibonacci";
+
 // Typography
 $font-size-root: 16px;
 $font-family-sans-serif: "Montserrat", sans-serif;
@@ -37,8 +40,8 @@ $baltic-sea: #232224; // dark theme body-bg color
 $lima: #52c41a; // .throne__title-mark background-color
 
 $body-color: $black;
-// $body-bg: $baltic-sea;
 $body-bg: $white;
+$body-bg--dark: darken($baltic-sea, fibonacci.$asymp-l-percentage);
 
 // // The contrast ratio to reach against white, to determine if color changes from "light" to "dark". Acceptable values for WCAG 2.0 are 3, 4.5 and 7.
 // // See https://www.w3.org/TR/WCAG20/#visual-audio-contrast-contrast
