--- a/components/Reference/reference.module.scss
+++ b/components/Reference/reference.module.scss
@@ -1,6 +1,7 @@
 @use "sass:math";
 @use "sass:color";
 @use "../../src/styles/conf";
+@use "../../src/styles/conf/fibonacci";
 @use "../../src/styles/func";
 @use "../../src/styles/mix";
 
@@ -19,6 +20,20 @@
 	background-color: $-bgc;
 	padding: conf.$global-padding * 1.5 conf.$global-padding * 1.5
 		conf.$global-padding * 3;
+
+	@media (prefers-color-scheme: dark) {
+		@include mix.isomorphic-color-contrast(
+			conf.$body-bg--dark,
+			conf.$body-color,
+			color.invert(conf.$body-color, 100%)
+		);
+
+		background-color: color.change(
+			color.mix($-bgc, conf.$body-bg--dark),
+			$lightness: fibonacci.$asymp-l-percentage +
+				fibonacci.$asymp-xl-percentage
+		);
+	}
 
 	> *:not(#{$-reference}__figure) {
 		&:not(:first-child) {
@@ -112,9 +127,19 @@
 			conf.$white
 		);
 
-		background-color: $-bgc--hug;
+		background-color: conf.$body-bg;
 		border-radius: 1rem;
 		padding: conf.$global-padding * 1.5 conf.$global-padding;
+
+		@media (prefers-color-scheme: dark) {
+			@include mix.isomorphic-color-contrast(
+				conf.$body-bg--dark,
+				conf.$body-color,
+				conf.$white
+			);
+
+			background-color: conf.$body-bg--dark;
+		}
 
 		&:not(:first-child):not(#{$-reference}__figure) {
 			@media (min-width: #{conf.$xxs + 1}) and (max-width: #{conf.$xl - 1}) {
