--- a/components/Throne/throne.module.scss
+++ b/components/Throne/throne.module.scss
@@ -1,11 +1,21 @@
+@use "sass:color";
 @use "@sass-fairy/math/math";
 @use "../../src/styles/conf";
+@use "../../src/styles/conf/fibonacci";
 @use "../../src/styles/func";
 @use "../../src/styles/mix";
 
 .throne {
 	$-bgc: conf.$royal-blue;
 	background-color: $-bgc;
+
+	@media (prefers-color-scheme: dark) {
+		background-color: color.change(
+			color.mix($-bgc, conf.$body-bg--dark),
+			$lightness: fibonacci.$asymp-l-percentage +
+				fibonacci.$asymp-xl-percentage
+		);
+	}
 
 	&__container {
 		padding: {
